--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
+
+    <header></header>
+    <!-- header -->
+
+    <main></main>
+    <!-- main -->
     
 </body>
 </html>
