--- a/index.html
+++ b/index.html
@@ -3,12 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Toboolist</title>
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
 
-    <header></header>
+    <header>
+        <!--page logo -->
+        <figure>
+            <img src="./img/Logo.png" alt="logo toboolist">
+        </figure>
+        <h1>
+            Toboolist
+        </h1>
+    </header>
     <!-- header -->
 
     <main></main>
