add contents to main
add button box section
add 2 button

--- a/index.html
+++ b/index.html
@@ -19,7 +19,14 @@
     </header>
     <!-- header -->
 
-    <main></main>
+    <main>
+        <!-- button function -->
+         <div class="button_box">
+            <button>Add Task</button>
+            <button>Add Selection</button>
+         </div>
+        <!-- /button function -->
+    </main>
     <!-- main -->
     
 </body>
