fixed task area section
rename some id and classes

--- a/index.html
+++ b/index.html
@@ -30,43 +30,43 @@
         <!-- task area-->
          <section id="task_area">
             <div id="new_task">  
-                <ul>
+                <ul id="title_list">
                     <li>
                         <h1>New Task</h1>
                     </li>
                 </ul>
                 <ul>
                     <li>
-                        Quarterly Newsletter <span class="flag 1">Editorial</span>
+                        Quarterly Newsletter <span class="flag_ed">Editorial</span>
                     </li>
                 </ul>
             </div>
 
             <div id="today">
-                <ul>
+                <ul id="title_list">
                     <li>
-                        <h1>Today</h1>
+                        <_ed>Today</h1>
                     </li>
                 </ul>
                 <ul>
                     <li>
-                         Quarterly Newsletter <span class="flag 1">Editorial</span>
+                         Quarterly Newsletter <span class="flag_ed">Editorial</span>
                     </li>
                     <li>
-                        Quarterly Newsletter <span class="flag 4">Q1 Goals</span>
+                        Quarterly Newsletter <span class="flag_q1">Q1 Goals</span>
                     </li>
                     <li id="negative_check">
-                        Interview Jogn H.<span class="flag 3">Recruiting</span>
+                        Interview Jogn H.<span class="flag_recr">Recruiting</span>
                     </li>
                     <li>
-                        Summit update to mobile storefronts <span class="flag 5">Mobile</span>
+                        Summit update to mobile storefronts <span class="flag_mob">Mobile</span>
                     </li>
                 </ul>
                 
             </div>
                 
             <div id="upcoming">
-                <ul>
+                <ul id="title_list">
                     <li>
                         <h1>Upcoming</h1>
                     </li>
@@ -76,13 +76,13 @@
                         Schedule meeting with Alex 
                     </li>
                     <li>
-                        Homepage refresh <span class="flag 2">Website</span>
+                        Homepage refresh <span class="flag_web">Website</span>
                     </li>
                     <li>
-                        Interview Jogn H.<span class="flag 6">Sales</span>
+                        Interview Jogn H.<span class="flag_sales">Sales</span>
                     </li>
                     <li>
-                        Summit update to mobile storefronts <span class="flag 1">Editorial</span>
+                        Summit update to mobile storefronts <span class="flag_ed">Editorial</span>
                     </li>
                 </ul>
             </div>    
