fixed task area structure

--- a/index.html
+++ b/index.html
@@ -28,49 +28,52 @@
         <!-- /button function -->
 
         <!-- task area-->
-         <section id="task_area">
-            <div id="new_task">  
-                <ul id="title_list">
-                    <li>
-                        <h1>New Task</h1>
-                    </li>
-                </ul>
-                <ul>
-                    <li>
-                        Quarterly Newsletter <span class="flag_ed">Editorial</span>
-                    </li>
-                </ul>
-            </div>
+        <section id="task_area">
+            <section id="new_task">
+                <div class="title_section">
+                    <span>&#x25BC</span>
+                    <h1>New Task</h1>
+                </div>
+
+                <div class="task">
+                    <span id="positive_check">✓</span>
+                    <p>Quarterly Newsletter <span class="flag_ed">Editorial</span></p>
+                </div>
+            </section>
+
 
             <div id="today">
-                <ul id="title_list">
-                    <li>
-                        <_ed>Today</h1>
-                    </li>
-                </ul>
-                <ul>
-                    <li>
-                         Quarterly Newsletter <span class="flag_ed">Editorial</span>
-                    </li>
-                    <li>
-                        Quarterly Newsletter <span class="flag_q1">Q1 Goals</span>
-                    </li>
-                    <li id="negative_check">
-                        Interview Jogn H.<span class="flag_recr">Recruiting</span>
-                    </li>
-                    <li>
-                        Summit update to mobile storefronts <span class="flag_mob">Mobile</span>
-                    </li>
-                </ul>
-                
+                <div class="title_section">
+                    <span>&#x25BC</span>
+                    <h1>Today</h1>
+                </div>
+
+                <div class="task">
+                    <span id="positive_check">✓</span>
+                    <p>Quarterly Newsletter <span class="flag_ed">Editorial</span></p>
+                </div>
+
+                <div class="task">
+                    <span id="positive_check">✓</span>
+                    <p>Mobile app launch <span class="flag_q1">Q1 Goals</span></p>
+                </div>
+
+                <div class="task">
+                    <span id="negative_check">✕</span>
+                    <p>Interview Jogn H.<span class="flag_recr">Recruiting</span></p>
+                </div>
+
+                <div class="task">
+                    <span id="positive_check">✕</span>
+                    <p>Summit update to mobile storefronts <span class="flag_mob">Mobile</span></p>
+                </div>
             </div>
                 
             <div id="upcoming">
-                <ul id="title_list">
-                    <li>
-                        <h1>Upcoming</h1>
-                    </li>
-                </ul>
+                <div class="title_section">
+                    <span>&#x25BC</span>
+                    <h1>Upcoming</h1>
+                </div>
                 <ul>
                     <li id="negative_check">
                         Schedule meeting with Alex 
@@ -86,7 +89,7 @@
                     </li>
                 </ul>
             </div>    
-         </section>
+        </section>
         <!-- /task area -->
     </main>
     <!-- main -->
