--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
         <!-- task area-->
         <section id="task_area">
-            <section id="new_task">
+            <div id="new_task">
                 <div class="title_section">
                     <span>&#x25BC</span>
                     <h1>New Task</h1>
@@ -39,7 +39,7 @@
                     <span id="positive_check">✓</span>
                     <p>Quarterly Newsletter <span class="flag_ed">Editorial</span></p>
                 </div>
-            </section>
+            </div>
 
 
             <div id="today">
@@ -74,20 +74,30 @@
                     <span>&#x25BC</span>
                     <h1>Upcoming</h1>
                 </div>
-                <ul>
-                    <li id="negative_check">
-                        Schedule meeting with Alex 
-                    </li>
-                    <li>
-                        Homepage refresh <span class="flag_web">Website</span>
-                    </li>
-                    <li>
-                        Interview Jogn H.<span class="flag_sales">Sales</span>
-                    </li>
-                    <li>
-                        Summit update to mobile storefronts <span class="flag_ed">Editorial</span>
-                    </li>
-                </ul>
+
+                <div class="task">
+                    <span id="negative_check">✕</span>
+                    <p> Scheddive meeting with Alex </p>
+                </div>
+
+                <div class="task">
+                    <span id="positive_check">✕</span>
+                    <p>Homepage refresh <span class="flag_web">Website</span></p>
+                </div>
+                <div class="task">
+                    <span id="positive_check">✕</span>
+                    <p>Homepage refresh <span class="flag_web">Website</span></p>
+                </div>
+
+                <div class="task">
+                    <span id="positive_check">✕</span>
+                    <p>Interview Jogn H.<span class="flag_sales">Sales</span></p>
+                </div>
+                
+                <div class="task">
+                    <span id="positive_check">✕</span>
+                    <p>Summit update to mobile storefronts <span class="flag_ed">Editorial</span></p>
+                </div>
             </div>    
         </section>
         <!-- /task area -->
