add id to button

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
     <main>
         <!-- button function -->
          <div class="button_box">
-            <button>Add Task</button>
-            <button>Add Selection</button>
+            <button id="selected">Add Task</button>
+            <button id="unselected">Add Selection</button>
          </div>
         <!-- /button function -->
 
