--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
             <div id="new_task">
                 <div class="title_section">
                     <span>&#x25BC</span>
-                    <h1>New Task</h1>
+                    <h2>New Task</h2>
                 </div>
 
                 <div class="task">
-                    <span id="positive_check">✓</span>
+                    <span class="positive_check">✓</span>
                     <p>Quarterly Newsletter <span class="flag_ed">Editorial</span></p>
                 </div>
             </div>
@@ -45,26 +45,26 @@
             <div id="today">
                 <div class="title_section">
                     <span>&#x25BC</span>
-                    <h1>Today</h1>
+                    <h2>Today</h2>
                 </div>
 
                 <div class="task">
-                    <span id="positive_check">✓</span>
+                    <span class="positive_check">✓</span>
                     <p>Quarterly Newsletter <span class="flag_ed">Editorial</span></p>
                 </div>
 
                 <div class="task">
-                    <span id="positive_check">✓</span>
+                    <span class="positive_check">✓</span>
                     <p>Mobile app launch <span class="flag_q1">Q1 Goals</span></p>
                 </div>
 
                 <div class="task">
-                    <span id="negative_check">✕</span>
+                    <span class="negative_check">✕</span>
                     <p>Interview Jogn H.<span class="flag_recr">Recruiting</span></p>
                 </div>
 
                 <div class="task">
-                    <span id="positive_check">✕</span>
+                    <span class="positive_check">✕</span>
                     <p>Summit update to mobile storefronts <span class="flag_mob">Mobile</span></p>
                 </div>
             </div>
@@ -72,25 +72,25 @@
             <div id="upcoming">
                 <div class="title_section">
                     <span>&#x25BC</span>
-                    <h1>Upcoming</h1>
+                    <h2>Upcoming</h2>
                 </div>
 
                 <div class="task">
-                    <span id="negative_check">✕</span>
+                    <span class="negative_check">✕</span>
                     <p> Scheddive meeting with Alex </p>
                 </div>
 
                 <div class="task">
-                    <span id="positive_check">✕</span>
+                    <span class="positive_check">✕</span>
                     <p>Homepage refresh <span class="flag_web">Website</span></p>
                 </div>
                 <div class="task">
-                    <span id="positive_check">✕</span>
+                    <span class="positive_check">✕</span>
                     <p>Homepage refresh <span class="flag_web">Website</span></p>
                 </div>
 
                 <div class="task">
-                    <span id="positive_check">✕</span>
+                    <span class="positive_check">✕</span>
                     <p>Interview Jogn H.<span class="flag_sales">Sales</span></p>
                 </div>
                 
