--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <section id="task_area">
             <div id="new_task">
                 <div class="title_section">
-                    <span>&#x25BC</span>
+                    <span>&#x25BC;</span>
                     <h2>New Task</h2>
                 </div>
 
@@ -44,7 +44,7 @@
 
             <div id="today">
                 <div class="title_section">
-                    <span>&#x25BC</span>
+                    <span>&#x25BC;</span>
                     <h2>Today</h2>
                 </div>
 
@@ -71,7 +71,7 @@
                 
             <div id="upcoming">
                 <div class="title_section">
-                    <span>&#x25BC</span>
+                    <span>&#x25BC;</span>
                     <h2>Upcoming</h2>
                 </div>
 
