fixed errors to icons check

--- a/index.html
+++ b/index.html
@@ -81,21 +81,21 @@
                 </div>
 
                 <div class="task">
-                    <span class="positive_check">✕</span>
+                    <span class="positive_check">✓</span>
                     <p>Homepage refresh <span class="flag_web">Website</span></p>
                 </div>
                 <div class="task">
-                    <span class="positive_check">✕</span>
+                    <span class="positive_check">✓</span>
                     <p>Homepage refresh <span class="flag_web">Website</span></p>
                 </div>
 
                 <div class="task">
-                    <span class="positive_check">✕</span>
+                    <span class="positive_check">✓</span>
                     <p>Interview Jogn H.<span class="flag_sales">Sales</span></p>
                 </div>
                 
                 <div class="task">
-                    <span id="positive_check">✕</span>
+                    <span class="positive_check">✓</span>
                     <p>Summit update to mobile storefronts <span class="flag_ed">Editorial</span></p>
                 </div>
             </div>    
