--- a/index.html
+++ b/index.html
@@ -30,69 +30,81 @@
         <!-- task area-->
         <section id="task_area">
             <div id="new_task">
-                <div class="title_section">
-                    <span>&#x25BC;</span>
-                    <h2>New Task</h2>
-                </div>
-
                 <div class="task">
-                    <span class="positive_check">✓</span>
-                    <p>Quarterly Newsletter <span class="flag_ed">Editorial</span></p>
+                    <ul>
+                        <li class="title_section">
+                            <span class="icon">&#x25BC;</span>
+                            <h2>New Task</h2>
+                        </li>
+
+                        <li>
+                            <span class="positive_check">✓</span>
+                            <p>Quarterly Newsletter <span class="flag_ed">Editorial</span></p>
+                        </li>
+                    </ul>
                 </div>
             </div>
 
 
             <div id="today">
-                <div class="title_section">
-                    <span>&#x25BC;</span>
-                    <h2>Today</h2>
-                </div>
-
                 <div class="task">
-                    <span class="positive_check">✓</span>
-                    <p>Quarterly Newsletter <span class="flag_ed">Editorial</span></p>
-                </div>
+                    <ul>
+                        <li class="title_section">
+                            <span class="icon">&#x25BC;</span>
+                            <h2>Today</h2>
+                        </li>
 
-                <div class="task">
-                    <span class="positive_check">✓</span>
-                    <p>Mobile app launch <span class="flag_q1">Q1 Goals</span></p>
-                </div>
+                        <li>
+                            <span class="positive_check">✓</span>
+                            <p>Quarterly Newsletter <span class="flag_ed">Editorial</span></p>
+                        </li>
 
-                <div class="task">
-                    <span class="negative_check">✕</span>
-                    <p>Interview Jogn H.<span class="flag_recr">Recruiting</span></p>
-                </div>
+                        <li>
+                            <span class="positive_check">✓</span>
+                            <p>Mobile app launch <span class="flag_q1">Q1 Goals</span></p>
+                        </li>
 
-                <div class="task">
-                    <span class="positive_check">✕</span>
-                    <p>Summit update to mobile storefronts <span class="flag_mob">Mobile</span></p>
+                        <li>
+                            <span class="negative_check">✕</span>
+                            <p>Interview Jogn H.<span class="flag_recr">Recruiting</span></p>
+                        </li>
+
+                        <li>
+                            <span class="positive_check">✕</span>
+                            <p>Summit update to mobile storefronts <span class="flag_mob">Mobile</span></p>
+                        </li>
+                    </ul>
                 </div>
             </div>
                 
             <div id="upcoming">
-                <div class="title_section">
-                    <span>&#x25BC;</span>
-                    <h2>Upcoming</h2>
-                </div>
+                <div class="task">
+                    <ul>
+                        <li class="title_section">
+                            <span class="icon">&#x25BC;</span>
+                            <h2>Upcoming</h2>
+                        </li>
 
-                <div class="task">
-                    <span class="negative_check">✕</span>
-                    <p> Scheddive meeting with Alex </p>
-                </div>
+                        <li>
+                            <span class="negative_check">✕</span>
+                            <p> Scheddive meeting with Alex </p>
+                        </li>
 
-                <div class="task">
-                    <span class="positive_check">✓</span>
-                    <p>Homepage refresh <span class="flag_web">Website</span></p>
-                </div>
+                        <li>
+                            <span class="positive_check">✓</span>
+                            <p>Homepage refresh <span class="flag_web">Website</span></p>
+                        </li>
 
-                <div class="task">
-                    <span class="positive_check">✓</span>
-                    <p>Interview Jogn H.<span class="flag_sales">Sales</span></p>
-                </div>
-                
-                <div class="task">
-                    <span class="positive_check">✓</span>
-                    <p>Summit update to mobile storefronts <span class="flag_ed">Editorial</span></p>
+                        <li>
+                            <span class="positive_check">✓</span>
+                            <p>Interview Jogn H.<span class="flag_sales">Sales</span></p>
+                        </li>
+
+                        <li>
+                            <span class="positive_check">✓</span>
+                            <p>Summit update to mobile storefronts <span class="flag_ed">Editorial</span></p>
+                        </li>
+                    </ul>
                 </div>
             </div>    
         </section>
